--- a/cv/src/assets/i18n/en.json
+++ b/cv/src/assets/i18n/en.json
@@ -1,4 +1,12 @@
 {
+  "buttons": {
+    "theme": "Theme"
+  },
+  "chips": {
+    "primary": "Default",
+    "accent": "Green",
+    "warn": "Red"
+  },
   "sections": {
     "info": {
       "title": "Information",
