--- a/docs/assets/i18n/pl.json
+++ b/docs/assets/i18n/pl.json
@@ -1,4 +1,12 @@
 {
+  "buttons": {
+    "theme": "Motyw"
+  },
+  "chips": {
+    "primary": "Domyślny",
+    "accent": "Zielony",
+    "warn": "Czerwony"
+  },
   "sections": {
     "info": {
       "title": "Informacje",
