--- a/docs/assets/i18n/pl.json
+++ b/docs/assets/i18n/pl.json
@@ -20,5 +20,6 @@
     "experience": "Doświadczenie",
     "education": "Wykształcenie",
     "skills": "Umiejętności"
-  }
+  },
+  "noData": "Brak danych"
 }
