--- a/cv/src/assets/i18n/pl.json
+++ b/cv/src/assets/i18n/pl.json
@@ -15,7 +15,8 @@
       "title": "Informacje",
       "phone": "Telefon",
       "email": "Email",
-      "linkedIn": "LinkedIn"
+      "linkedIn": "LinkedIn",
+      "github": "Github"
     },
     "experience": "Doświadczenie",
     "education": "Wykształcenie",
