--- a/docs/assets/i18n/en.json
+++ b/docs/assets/i18n/en.json
@@ -15,7 +15,8 @@
       "title": "Information",
       "phone": "Phone",
       "email": "Email",
-      "linkedIn": "LinkedIn"
+      "linkedIn": "LinkedIn",
+      "github": "Github"
     },
     "experience": "Experience",
     "education": "Education",
