--- a/cv/src/assets/i18n/pl.json
+++ b/cv/src/assets/i18n/pl.json
@@ -16,7 +16,7 @@
     "skills": "Umiejętności"
   },
   "personalData": {
-    "aboutme": "O mnie"
+    "aboutMe": "O mnie"
   },
   "noData": "Brak danych"
 }
