--- a/docs/assets/i18n/en.json
+++ b/docs/assets/i18n/en.json
@@ -16,7 +16,7 @@
     "skills": "Skills"
   },
   "personalData": {
-    "aboutme": "About me"
+    "aboutMe": "About me"
   },
   "noData": "No data"
 }
