New background theme -in progress

--- a/cv/src/assets/i18n/en.json
+++ b/cv/src/assets/i18n/en.json
@@ -8,7 +8,7 @@
   "chips": {
     "navyBlue": "Navy Blue",
     "green": "Green",
-    "beige": "Beige"
+    "orange": "Orange"
   },
   "sections": {
     "experience": "Experience",
