--- a/docs/assets/i18n/pl.json
+++ b/docs/assets/i18n/pl.json
@@ -6,9 +6,9 @@
     "enterColor": "Wpisz kolor"
   },
   "chips": {
-    "navyBlue": "Granatowy",
-    "green": "Zielony",
-    "beige": "Beżowy"
+    "navyBlue": "Granat",
+    "green": "Zieleń",
+    "orange": "Pomarańcz"
   },
   "sections": {
     "experience": "Doświadczenie",
