--- a/cv/src/assets/i18n/en.json
+++ b/cv/src/assets/i18n/en.json
@@ -8,7 +8,7 @@
   "chips": {
     "navyBlue": "Navy Blue",
     "green": "Green",
-    "orange": "Orange"
+    "red": "Red"
   },
   "sections": {
     "experience": "Experience",
