--- a/docs/assets/i18n/pl.json
+++ b/docs/assets/i18n/pl.json
@@ -8,7 +8,7 @@
   "chips": {
     "navyBlue": "Granat",
     "green": "Zieleń",
-    "orange": "Pomarańcz"
+    "red": "Czerwień"
   },
   "sections": {
     "experience": "Doświadczenie",
