--- a/cv/src/assets/i18n/en.json
+++ b/cv/src/assets/i18n/en.json
@@ -7,8 +7,8 @@
   },
   "chips": {
     "navyBlue": "Navy Blue",
-    "green": "Green",
-    "red": "Red"
+    "purple": "Purple",
+    "orange": "Orange"
   },
   "sections": {
     "experience": "Experience",
