--- a/cv/src/assets/i18n/pl.json
+++ b/cv/src/assets/i18n/pl.json
@@ -7,8 +7,8 @@
   },
   "chips": {
     "navyBlue": "Granat",
-    "green": "Zieleń",
-    "red": "Czerwień"
+    "purple": "Fiolet",
+    "orange": "Pomarańcz"
   },
   "sections": {
     "experience": "Doświadczenie",
