--- a/cv/src/assets/i18n/en.json
+++ b/cv/src/assets/i18n/en.json
@@ -2,6 +2,7 @@
   "CHIPS": {
     "NAVY_BLUE": "Navy Blue",
     "PURPLE": "Purple",
+    "GREEN": "Green",
     "ORANGE": "Orange"
   },
   "SECTIONS": {
