--- a/docs/assets/i18n/pl.json
+++ b/docs/assets/i18n/pl.json
@@ -2,6 +2,7 @@
   "CHIPS": {
     "NAVY_BLUE": "Granat",
     "PURPLE": "Fiolet",
+    "GREEN": "Zielony",
     "ORANGE": "Pomarańcz"
   },
   "SECTIONS": {
