--- a/cv/src/assets/i18n/pl.json
+++ b/cv/src/assets/i18n/pl.json
@@ -1,4 +1,8 @@
 {
+  "BUTTONS": {
+    "DOWNLOAD_CV": "Pobierz CV",
+    "EDIT_TEMPLATE": "Edytuj szablon"
+  },
   "CHIPS": {
     "NAVY_BLUE": "Granat",
     "PURPLE": "Fiolet",
